--- a/SFXpad/SFXpad.csproj
+++ b/SFXpad/SFXpad.csproj
@@ -32,6 +32,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>SFXpad.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ดาวน์โหลด %282%29.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -147,6 +154,15 @@
     <None Include="Resources\BOUNCE.WAV" />
     <None Include="Resources\BOINGER.WAV" />
     <None Include="Resources\BNCEDRIP.WAV" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ดาวน์โหลด %282%29.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ดาวน์โหลด %282%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
